[tool.poetry]
name = "gleam"
version = "0.1.0"
description = "A sandbox for experimenting with generative models for financial time series."
authors = ["Matthew Brulhardt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
ipykernel = "^6.27.1"
pyarrow = "^14.0.1"
polars = "^0.19.18"
scipy = "^1.11.4"
py-vollib = "^1.0.1"
matplotlib = "^3.8.2"
click = "^8.1.7"
cvxpy = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
