[tool.poetry]
name = "gleam"
version = "0.1.0"
description = "A sandbox for experimenting with option models."
authors = ["Matthew Brulhardt", "Magnus Wiese"]
readme = "README.md"

[tool.poetry.dependencies]
# Mandatory
python = "^3.11"

scipy = "^1.11.4"
py-vollib = "^1.0.1"
cvxpy = "^1.4.1"

torchlambertw = { git = "ssh://git@github.com/gmgeorg/torchlambertw.git"}


# Extras
torch = {version = "^2.2.2", optional = true}

[tool.poetry.extras]
torch = ["torch"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"
ruff = "^0.2.1"
pandas = "^2.1.3"
ipykernel = "^6.27.1"
pyarrow = "^14.0.1"
polars = "^0.19.18"
matplotlib = "^3.8.2"
click = "^8.1.7"
seaborn = "^0.13.1"

[tool.poetry.group.test.dependencies]
coverage = ">=7.2.0"
deepdiff = "^6.3"
httpretty = "^1.1"
jaraco-classes = "^3.3.1"
pytest = "^8.0"
pytest-cov = "^4.0"
pytest-mock = "^3.9"
pytest-randomly = "^3.12"
pytest-xdist = { version = "^3.1", extras = ["psutil"] }

[tool.poetry.group.typing.dependencies]
mypy = ">=1.8.0"

[tool.ruff]
extend-exclude = ["tests"]

# Commented out for now
# [tool.ruff.lint]
# extend-select = [
#    "D" # pydocstyle
# ]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
